minor change in mining docs

--- a/protocol-overview/mining.mdx
+++ b/protocol-overview/mining.mdx
@@ -51,13 +51,11 @@ VRAM is the most important factor for GPUs running LLMs.
 
 Details: [https://snapshot.org/#/heurist.eth/proposal/0x508c8441c2fd2c33b717489fdbd8cba9df55666d6a42310d7d837f2f5ae9a2e2](https://snapshot.org/#/heurist.eth/proposal/0x508c8441c2fd2c33b717489fdbd8cba9df55666d6a42310d7d837f2f5ae9a2e2)
 
-Before TGE, Heurist Imaginaries holders get boosted mining rewards. The multiplier depends on the number of NFTs that a wallet holds.
-
-Each NFT can boost up to 3 GPUs.
+Heurist Imaginaries holders get boosted mining rewards. The multiplier depends on the number of NFTs that a wallet holds. Each NFT can boost up to 3 GPUs.
 
 **StHEU Multiplier Rules**
 
-After TGE, stHEU holders get boosted mining rewards. Multiplier rules TBD
+After staking goes live, stHEU holders get boosted mining rewards. Multiplier rules TBD
 
 ## How to Participate
 
@@ -65,11 +63,11 @@ After TGE, stHEU holders get boosted mining rewards. Multiplier rules TBD
 
 Whether you're a gamer with a high-end setup, a former Ethereum miner with unused GPUs, an AI researcher with occasionally idle GPUs, or a data center owner with surplus capacity, you can download the miner program at [https://github.com/heurist-network/miner-release](https://github.com/heurist-network/miner-release) and set up a miner node. For detailed hardware specifications and step-by-step guide, please visit our [Miner Guide page](/guides/miner-guide)
 
-1. Rent managed nodes
+2. Rent managed nodes
 
 Not everyone has the required GPU hardware, but that shouldn't stop you from participating in our testnet. We provide managed mining node service to our community at a competitive price compared to market rate. Our skilled team of engineers will handle the setup of mining machines and software on your behalf while you can relax and watch your rewards grow daily.
 
-### Anti-Cheat
+### Result Verification and Anti-Cheat
 
 The input and output of every compute job is stored and being tracked by an asynchronous monitoring system. Heurist team reserves the right to slash testnet points of miners demonstrating malicious activities to game the reward system including and not limited to:
 
