--- a/protocol-overview/mining/season-1.mdx
+++ b/protocol-overview/mining/season-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Season 1 (Ended)"
-description: "We allocate 5% of total Heurist Token supply for season 1 mining rewards. Rewards earned are denominated in points, and will be claimable as fully liquid tokens at the mainnet Token Generation Event (TGE)."
+description: "We allocate 5% of total Heurist Token supply for season 1 mining rewards. Rewards earned are denominated in points, and will be claimable as fully liquid tokens at the Token Generation Event (TGE)."
 ---
 
 **Detailed rules** [https://heuristai.medium.com/a-tale-of-two-points-introducing-heurist-testnet-mining-17430471ebec](https://heuristai.medium.com/a-tale-of-two-points-introducing-heurist-testnet-mining-17430471ebec)
@@ -43,7 +43,7 @@ description: "We allocate 5% of total Heurist Token supply for season 1 mining r
 
 **Token Distribution**
 
-* Base rewards will be claimable no more than 24 hours after the Heurist Token becomes tradable on CEXs and DEX&#x73;**.** Distribution proportional to points earned in each category
+* Base rewards will be claimable right after Heurist Token becomes tradable.
 
 * Bonus rewards will be delivered in the form of stHEU (Staked Heurist Token), which can be used to boost mining rewards, or converted to liquid HEU token with a lockup period.
 
