--- a/dev-guide/api-reference/image-generation/introduction.mdx
+++ b/dev-guide/api-reference/image-generation/introduction.mdx
@@ -4,7 +4,7 @@ title: "Image Generation API"
 
 ### Overview
 
-Heurist provides REST API that allows developers to invoke Stable Diffusion / Flux model inference to programmatically generate images based on text prompts. This document outlines how to use the API to submit image generation jobs and retrieve the generated images.
+Heurist provides a REST API that allows developers to invoke Stable Diffusion / Flux model inference to programmatically generate images based on text prompts. This document outlines how to use the API to submit image generation jobs and retrieve the generated images.
 
 ### Authentication
 
