--- a/dev-guide/reference/integration-overview.mdx
+++ b/dev-guide/reference/integration-overview.mdx
@@ -5,11 +5,11 @@ description: "Heurist empowers developers to seamlessly integrate AI into applic
 
 ![AI Integration Cover]( /images/dev-guide/cover-img-integration.jpg )
 
-###  Quick Start Examples
+#  Quick Start Examples
 
 Kickstart your development by exploring our [GitHub dev-examples repository](https://github.com/heurist-network/dev-examples). It’s packed with starter code and comprehensive guides to get you up and running fast!
 
-###  Open Source Projects
+#  Open Source Projects
 
 Heurist’s open-source frontends integrate with our LLM and Image Generation APIs, providing powerful templates and inspiration for your own projects. These apps showcase the potential of Heurist Protocol and serve as learning resources for the community.
 
@@ -22,7 +22,7 @@ Heurist’s open-source frontends integrate with our LLM and Image Generation AP
 
 -  [**Babel Bot**](https://github.com/heurist-network/babel-discord-bot) – A Discord bot powered by LLMs, facilitating seamless language translation.
 
-###  Get Your API Key & Start Building
+#  Get Your API Key & Start Building
 
 Ready to dive in? Simply fill out the [request form](https://dev-api-form.heurist.ai/) to receive your API key promptly.
 
@@ -30,7 +30,7 @@ For individual developers, we offer **2,000–10,000 free credits** (equivalent 
 
 Working on a Web3 project with live users or planning to launch in production? We offer **extended free access** to help scale your project.
 
-###  Why Choose Heurist API?
+#  Why Choose Heurist API?
 
 - **Fast & Simple**: Integrate powerful AI features in minutes, without complex setups or infrastructure headaches.
 - **Scalable**: From hobby projects to enterprise-grade deployments, our APIs scale to meet your needs.
@@ -38,7 +38,7 @@ Working on a Web3 project with live users or planning to launch in production? W
 
 Elevate your products with our cutting-edge AI APIs. Start building today and see the future of AI integration with Heurist!
 
-###  Join the Developer Community
+#  Join the Developer Community
 
 If you have any questions or want to connect with other developers, join our community:
 
