--- a/dev-guide/api-reference/llm-gateway/introduction.mdx
+++ b/dev-guide/api-reference/llm-gateway/introduction.mdx
@@ -20,4 +20,4 @@ With the Heurist Gateway, you can interact with top-performing models like **Mis
 To get started with the Heurist LLM Gateway, you’ll first need an API key from Heurist. Once you have your API token, integrating it into your application is as simple as configuring the SDK and making a few calls.
 
 
-For API Code and reference, Please visit the [/chat/completions](./endpoint) section.
+For API Code and reference, Please visit the [Chat Completion Endpoint](./endpoint) section. This dynamic interface allows users to seamlessly interact with the system, experiment with its capabilities, and gain a hands-on understanding of its functionality.
