added core contracts

--- a/protocol-overview/contract-addresses.mdx
+++ b/protocol-overview/contract-addresses.mdx
@@ -6,9 +6,9 @@ title: "Contract Addresses"
 
 | Name   | Network     | Link |
 |--------|-------------|------|
-| HEU    | ETH Mainnet |      |
+| HEU    | ETH Mainnet | https://etherscan.io/token/0xec463D00aa4dA76fb112cD2e4AC1C6BeF02da6ea |
 | StHEU  | ETH Mainnet |      |
-| HEU    | ZKsync Era  |      |
+| HEU    | ZKsync Era  |https://explorer.zksync.io/address/0xAbEc5eCBe08b6c02F5c9A2fF82696e1E7dB6f9bf|
 | StHEU  | ZKsync Era  |      |
 
 # Mining Contracts
