minor bug fix for basic image generation section

--- a/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
+++ b/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Basic Image Generation"
-description: "Getting Started with Heurist API"
+title: "Basic Image Generation"s
 ---
 Given a prompt and the model will generate a new image.
 
