Basic image generation data fix

--- a/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
+++ b/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Basic Image Generation"s
 ---
-Given a prompt and the model will generate a new image.
+Give a prompt and the model will generate a new image.
 
 ### Input
 
