--- a/dev-guide/api-reference/heurist-sdk/getting-started.mdx
+++ b/dev-guide/api-reference/heurist-sdk/getting-started.mdx
@@ -41,7 +41,7 @@ The Heurist API requires authentication using an API key. API keys are used to v
 ### Example Authentication Flow
 To authenticate your application, you will need to pass the API key to the Heurist SDK in your code. Here’s how you can set up authentication:
 
-## Usage
+## Initialization
 
 ```typescript
 import Heurist from 'heurist'
