--- a/dev-guide/reference/image-prompting.mdx
+++ b/dev-guide/reference/image-prompting.mdx
@@ -6,9 +6,9 @@ Stable Diffusion can benefit significantly from the use of comma-separated words
 
 Flux models work best if the prompt contains complete sentences depicting the image. Comma-separated tags are not recommended. This is a major difference between Stable Diffusion and Flux.
 
-LoRA is a fine-tuning technique that makes a model learn a specific concept, style, item, or character. LoRA requires "trigger words" to function. For example, the phrase "Heuristai logo" must be included if you want the `HeuristLogo` model to generate a correct logo. Some LoRA models require multiple words or phrases to trigger effectively.
+LoRA is a fine-tuning technique that makes a model learn a specific concept, style, item, or character. LoRA requires "trigger words" to function. For example, the phrase "Heuristai logo" must be included if you want the `HeuristLogo` model to generate a correct logo. Some LoRA models require multiple words or phrases to trigger effectively. We suggest that the "autofill" field in [models.json](https://github.com/heurist-network/heurist-models/blob/main/models.json) should always be present in the prompt, and it's highly recommended to include key words in the "recommend" field.
 
-We recommend visiting [Heurist Imagine](https://imagine.heurist.ai) and see the example prompts of the models that you want to use.
+We recommend visiting [Heurist Imagine](https://imagine.heurist.ai), go to individual model pages and see the example prompts of the models that you want to use.
 
 ### Need More Models?
 
