--- a/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
+++ b/dev-guide/api-reference/heurist-sdk/basic-image-generation.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Basic Image Generation"s
+title: "Basic Image Generation"
 ---
 Give a prompt and the model will generate a new image.
 
@@ -9,7 +9,7 @@ Give a prompt and the model will generate a new image.
 import Heurist from 'heurist'
  
 const heurist = new Heurist({
-  apiKey: process.env['HEURIST_API_KEY'], // This is the default and can be omitted
+  apiKey: process.env['HEURIST_API_KEY'],
 })
  
 async function main() {
@@ -38,7 +38,7 @@ main()
 
 | Property         | Type       | Required | Description                                                                 |
 |------------------|------------|----------|-----------------------------------------------------------------------------|
-| `model`          | `ImageModel` | true     | The name of the model used, which specifies the particular model used to perform the generation or iteration. |
+| `model`          | `string` | true     | The name of the model used, which specifies the particular model used to perform the generation or iteration. |
 | `prompt`         | `string`     | true     | The main cue information used to generate the image or iteration.          |
 | `neg_prompt`     | `string`     | false    | Negative cue messages used to specify that generation of content should be avoided. |
 | `num_iterations` | `number`     | false    | Number of iterations to perform. (1-50)                                    |
@@ -58,32 +58,6 @@ main()
 | `url`    | `string` | true     | The URL link to the generated image.     |
 
 ---
+## Supported Models
 
-### Example
-
-```json
-{
-  "url": "https://heurist-images.s3.us-east-1.amazonaws.com/**********.png",
-  "model": "BrainDance",
-  "prompt": "xxxxx",
-  "neg_prompt": "xxxxx",
-  ...
-}
-```
-## Types
-
-### `ImageModel`
-
-Supported model list can be found at [https://docs.heurist.ai/integration/supported-models](https://docs.heurist.ai/integration/supported-models). Recommended models:
-
-- **BrainDance**
-- **BlazingDrive**
-- **YamersCartoonArcadia**
-- **ArthemyComics**
-- **ArthemyReal**
-- **Aurora**
-- **SDXLUnstableDiffusersV11**
-- **AnimagineXL**
-- **CyberRealisticXL**
-- **DreamShaperXL**
-- **AAMXLAnimeMix**
+Visit the [supported model list](../../reference/supported-models#image-generation-models)
