--- a/dev-guide/api-reference/image-generation/introduction.mdx
+++ b/dev-guide/api-reference/image-generation/introduction.mdx
@@ -32,12 +32,9 @@ Submit a JSON payload with the following structure:
       "seed": "Seed for the random number generator to ensure reproducibility"
     }
   },
-  "model_id": "Identifier for the image generation model",
-  "deadline": "Maximum time in seconds to wait for the job to complete (Not supported yet)",
-  "priority": "Priority level of the job (Not supported yet)"
+  "model_id": "Identifier for the image generation model"
 }
 ```
-
 
 
 #### Parameters
@@ -68,17 +65,7 @@ Submit a JSON payload with the following structure:
 
 When the job is successfully processed, the API returns a URL pointing to the generated image.
 
-
-
-For API Code and reference, Please visit the [SD Image Generation API](./endpoint) section.
-
-### Prompting Guide
-
-For the best prompts, take a look at the JSON examples provided in our [Stable Diffusion examples](https://github.com/heurist-network/heurist-models/tree/main/examples). These are fully reproducible and are used in [**Heurist Imagine**](https://imagine.heurist.ai).
-
-Each model has its strengths in terms of image style. For better results, it might take a few tries to perfect your prompts. We recommend visiting [Prompthero ](< https://prompthero.com>)and [Prompt Guide](https://stable-diffusion-art.com/prompt-guide/) to learn more about improving your prompts.
-
-***Important:***&#x4C;oRA models require "trigger words" to activate the specific style or content. We suggest that the "autofill" field in [models.json](https://github.com/heurist-network/heurist-models/blob/main/models.json) should always be present in the prompt, and it's highly recommended to include key words in the "recommend" field.
+For API reference, Please visit the [Image Generation Endpoint](./endpoint) section.
 
 ### Cost Considerations
 
@@ -92,13 +79,10 @@ The cost of generating an image depends on the model type, resolution, and numbe
 
 * **SD 1.5** models are smaller and thus cost less than SDXL models.
 
-### Integration Examples
+### API Integration Examples
 
 Want to see the Image Generation API in action? Here are a few integration examples:
 
 * [Stable Diffusion WebUI](https://github.com/heurist-network/stable-diffusion-webui) is a simple demo project that integrates with Heurist's image generation API, built with [Gradio](https://www.gradio.app/) in Python. Here's the relevant [POST API request](https://github.com/heurist-network/stable-diffusion-webui/blob/master/main.py#L36)
 
 * [Heurist Node.js SDK](https://github.com/heurist-network/heurist-sdk/blob/main/packages/images/index.ts) integrates with the API. The SDK provides complete authentication and error handling features.
-
-For more examples, check out our [developer examples](https://github.com/heurist-network/dev-examples) on GitHub.
-
