--- a/introduction.mdx
+++ b/introduction.mdx
@@ -25,7 +25,7 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
 
 - **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
 
-- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto knowledge, AIGC NFTs Heurist brings cutting-edge AI to the crypto world.
+- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto knowledge, and AIGC NFTs, Heurist brings cutting-edge AI to the crypto world.
 
 #### About the name: Heurist (pronunciation: hyoo-ri-st)
 
