updated HEU token

--- a/protocol-overview/brand-assets.mdx
+++ b/protocol-overview/brand-assets.mdx
@@ -51,4 +51,13 @@ title: "Brand Assets"
   >
     Logo with Text Black (No Background)
   </Card>
+
+  <Card
+    title="HUE Token"
+    icon="image"
+    href="https://raw.githubusercontent.com/wjw12/docs/refs/heads/main/images/branding/Token%20Logo.png"
+    target="_blank"
+  >
+   HUE Token logo (No Background)
+  </Card>
 </CardGroup>
