--- a/protocol-overview/brand-assets.mdx
+++ b/protocol-overview/brand-assets.mdx
@@ -53,7 +53,7 @@ title: "Brand Assets"
   </Card>
 
   <Card
-    title="HUE Token"
+    title="HUE Token Logo"
     icon="image"
     href="https://raw.githubusercontent.com/wjw12/docs/refs/heads/main/images/branding/Token%20Logo.png"
     target="_blank"
