--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -24,35 +24,35 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | Category                                | Token Amount | % of Total Supply | TGE Unlock % | Cliff (months) | Total Vesting (months) |
 | --------------------------------------- | ------------ | ----------------- | ------------ | -------------- | ---------------------- |
 | Season 1 Testnet Miners (11k addresses) | 50,000,000   | 5.00              | 100          | 0              | 0                      |
-| Liquidity                               | 27,500,000   | 2.8               | 100          | 0              | 0                      |
-| Marketing Reserve                       | 25,000,000   | 2.50              | 100 (TBD)    | 0              | 0                      |
-| Imaginaries NFT Airdrop                 | 17,500,000   | 1.75              | 100          | 0              | 0                      |
+| Liquidity                               | 28,000,000   | 2.80              | 100          | 0              | 0                      |
+| Marketing Reserve                       | 18,500,000   | 1.85              | 100          | 0              | 0                      |
+| Imaginaries NFT Airdrop                 | 12,845,000   | 1.28              | 100          | 0              | 0                      |
 | Grants Program                          | 300,000      | 0.03              | 100          | 0              | 0                      |
-| Unallocated Grants                      | 2,200,000    | 0.22              | 0            | 3              | 0                      |
+| KOLs                                    | 6,500,000    | 0.65              | 20           | 0              | 6                      |
+| Unallocated Grants                      | 6,855,000    | 0.69              | 0            | 3              | 0                      |
 | Private Angels and VC                   | 60,000,000   | 6.00              | 0            | 3              | 24                     |
 | Team and Advisors                       | 150,000,000  | 15.00             | 0            | 3              | 24                     |
 | Mining (Exclusing Season 1)             | 500,000,000  | 50.00             | 0            | 3              | 120                    |
-| Protocol Treasury                       | 167,500,000  | 16.7              | 0            | 6              | 48                     |
+| Protocol Treasury                       | 167,000,000  | 16.70             | 0            | 6              | 48                     |
 
 ### Initial Distribution
 
 | Category                          | Initial HEU Supply |
 | --------------------------------- | ------------------ |
-| Airdrop to miners (on ZKsync Era) | 50000000           |
-| Airdrop to Imaginaries (on ETH)   | 14000000           |
+| Airdrop to miners                 | 50000000           |
+| Airdrop to Imaginaries            | 12845000           |
 | Ecosystem Grants                  | 300000             |
-| KOLs                              | 1000000            |
+| KOLs                              | 1300000            |
 | Initial Liquidity (DEX and CEX)   | 28000000           |
-| Marketing Reserve                 | 20000000           |
+| Marketing Reserve                 | 18500000           |
 
-<img 
+{/*<img 
     src="..\images\protocol-overview\heu_supply.png" 
     alt="heu_supply"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
-  />
+  />*/}
 
-
-### FAQ
+{/* ### FAQ
 
 * Where will the token be traded?
 
@@ -74,7 +74,7 @@ There will be no public sale.
 
 * What's the initial price?
 
-The initial price will be determined by the average trading price of Imaginaries NFT over a period of time before TGE. This ensures a fair pre-market price discovery.
+The initial price will be determined by the average trading price of Imaginaries NFT over a period of time before TGE. This ensures a fair pre-market price discovery. */}
 
 ### Dynamic Emission for Compute Providers
 
