--- a/ecosystem/imaginaries-nft.mdx
+++ b/ecosystem/imaginaries-nft.mdx
@@ -7,13 +7,11 @@ title: "Imaginaries NFT"
     style={{ width: '100%', display: 'block', margin: '0 auto' }}
   />
 
-Heurist Imaginaries are a collection of 500 NFT artwork created with Heurist. NFT holders serve as the main governance body of Heurist Protocol prior to TGE, and will continue to govern the protocol alongside Heurist Token holders after TGE.
+Heurist Imaginaries are a collection of 500 NFT artwork created with Heurist. NFT holders govern the protocol alongside Heurist Token holders.
 
 ### Benefits
 
 * Govern up to 2% of Heurist Token supply. Read more info about [Heurist "NFT House" governance](https://snapshot.org/#/heurist.eth/proposal/0xe62cd6acb40b0c6c3744480982785c36c26c85b83af16007167108cffd2ae21e). NFT holders can vote for governance proposals (1 NFT = 1 Vote)
-
-* Share 1.75% Heurist Token airdrop ([proposal](https://snapshot.org/#/heurist.eth/proposal/0x618a5bd1048ef22a6d8064eb162ad0cd9fc98771653915cf35496b3a74a3c9ba), each NFT shares 35,000 tokens)
 
 * Create and vote for ecosystem grants ([proposal](https://snapshot.org/#/heurist.eth/proposal/0xd700d60bd970206e2176ce74c3613f469e3278da056a69e044fe107c13dc4491))
 
