--- a/protocol-overview/brand-assets.mdx
+++ b/protocol-overview/brand-assets.mdx
@@ -53,11 +53,11 @@ title: "Brand Assets"
   </Card>
 
   <Card
-    title="HUE Token Logo"
+    title="HEU Token Logo"
     icon="image"
     href="https://raw.githubusercontent.com/wjw12/docs/refs/heads/main/images/branding/Token%20Logo.png"
     target="_blank"
   >
-   HUE Token logo (No Background)
+   HEU Token logo (No Background)
   </Card>
 </CardGroup>
